--- a/src/component/product/product.css
+++ b/src/component/product/product.css
@@ -27,4 +27,11 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 10px;
   }
+  .name-container {
+    /* border: 2px solid black; */
+    width: 20rem;
+  }
+  .product-container {
+    display: block;
+  }
 }
